# flora

./: .gitignore  Cargo.toml  README.md  default.html  justfile  sample.html
docs/: README.md  configuration.md
src/: cli.rs  config.rs  main.rs  process.rs  webview.rs  window.rs  windows_api.rs
src/pipe/: client.rs  mod.rs  protocol.rs  server.rs
