[package]
name = "flora"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive", "cargo"] }
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde-lexpr = "0.1.3"
serde_json = "1.0.134"
tabled = "0.17.0"
tokio = { version = "1.42.0", features = ["net", "rt-multi-thread"] }
webview2-com = "0.34.0"
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_HiDpi"] }
